# steller-dapps

./: .gitignore  COMMITS.md  README.md  demo.html  simulate.ts
.github/workflows/: ci.yml
contracts/stellar_vault/: Cargo.toml
contracts/stellar_vault/src/: lib.rs  oracle.rs
contracts/stellar_vault/tests/: test_vault.rs
frontend/: .env.example  debug-sim.js  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/src/__tests__/: stellar.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActivityFeed.tsx  Footer.tsx  Header.tsx  HeroStats.tsx  VaultPanel.tsx  YieldChart.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: stellar.ts
frontend/src/styles/: globals.css
scripts/: deploy.sh
