[package]
name = "stellar-vault"
version = "1.0.0"
edition = "2021"
authors = ["StellarVault Team"]
description = "Production-grade DeFi yield vault on Stellar Soroban"

[lib]
crate-type = ["cdylib", "rlib"]
name = "stellar_vault"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
stellar-xdr = { version = "21.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
